fixing overflow-auto class

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1281,6 +1281,6 @@ nav {
   word-wrap: break-word;
 }
 
-.-overflow-auto {
+.overflow-auto {
   overflow: auto;
 }
